2005-04-16  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alc.h: Removed useless #ifdef.

	* include/AL/alc.h, linux/doc/openal.texi,
	linux/src/alc/alc_context.c: The Linux implementation of
	alcMakeContextCurrent follows the spec now and returns an
	ALCboolean, where ALC_TRUE (value 1) means "OK". Formerly it
	returned an ALCenum, where ALC_NO_ERROR (value 0) meant "OK", so
	this change breaks compatibility, but I can't see a way around
	it. It is a total miracle why a value is returned at all, because
	alcMakeContextCurrent sets an ALC error condition in case of a
	failure, anyway, so the right way would be using alcGetError.

	* linux/pb.tar.gz: Removed. It seems to be an ancient leftover for
	MacOS X.

2005-04-11  Sven Panne  <sven.panne@aedion.de>

	* demos/altest/common/altest.cpp, include/AL/altypes.h,
	linux/doc/openal.texi, linux/src/al_able.c, linux/src/al_buffer.c,
	linux/src/al_distance.c, linux/src/al_error.c, linux/src/al_ext.c,
	linux/src/al_ext_iasig.c, linux/src/al_filter.c,
	linux/src/al_listen.c, linux/src/al_mixer.c, linux/src/al_queue.c,
	linux/src/al_source.c, linux/src/al_state.c,
	linux/src/extensions/al_ext_loki.c: Use the official error tokens
	internally. Deprecated AL_INVALID. Added a preprocessor token
	AL_PURE_API which can be #defined to 1 to exclude non-1.1 stuff
	(more to come).

	* include/AL/altypes.h: Re-arranged AL error tokens a bit,
	synchronizing the documentation with the OpenAL 1.1
	spec. Explicitly stated that AL_ILLEGAL_ENUM and
	AL_ILLEGAL_COMMAND are deprecated tokens from ancient times.

2005-03-31  Sven Panne  <sven.panne@aedion.de>
	
 	* linux/configure.ac: Define _OPENAL32LIB for Cygwin/MinGW builds.

	* linx/src/al_ext.c, linx/src/al_ext_iasig.c,
	linx/src/al_source.c: Added a few "#ifdef LINUX_AL" to synch the
	code with the headers.

	* linux/configure.ac: Initial MinGW support.

	* linux/configure.ac: Add a compatibility hack for older autoconf
	versions, so we require version >2.50 only now.
