@@ -1,5 +1,9 @@
 2005-04-16  Sven Panne  <sven.panne@aedion.de>
 
+	* include/AL/alc.h, linux/src/alc/alc_context.c: The Linux
+	implementation of alcProcessContext and alcDestroyContext follow
+	the spec now and return void. Again, this breaks compatibility.
+
 	* include/AL/alc.h: Removed useless #ifdef.
 
 	* include/AL/alc.h, linux/doc/openal.texi,
